--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,35 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+ ul{
+     padding:0;
+ }
+.songuify {
+    cursor:pointer;
+}
+
+.songuify:hover {
+    background-color: rgba($color: #000000e1, $alpha: 0.1);
+    cursor:pointer;
+}
+
+body {
+    background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+color:white;
+}
+
+h1 {
+    border-bottom: white solid 2px;
+    margin-bottom: 2rem;
+}
+ul {
+    margin-top: 2rem;
+}
+li {
+    border-bottom: white solid 1px;
+}
+ol {
+    padding-left: 20px;
+}
