--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,13 +11,43 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.containerButton {
+    display: flex;
+    justify-content: space-evenly;
+}
+.audio {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.container {
+    background: rgb(136, 137, 138);
+background: linear-gradient(90deg, rgb(124, 125, 128) 0%, rgba(125,120,122,1) 0%, rgb(96, 97, 99) 50%, rgba(123,118,120,1) 100%);
+    border-radius: 1rem;
+    max-width: 30rem;
+    padding: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.btn {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.btn:hover {
 
+    box-shadow: 0 4px 8px 0 rgba(179, 177, 177, 0.2), 0 6px 20px 0 rgba(223, 219, 219, 0.19);
+}
+
+h4{
+    border-bottom: white solid 2px;
+    margin-bottom: 1.5rem;
+}
  ul{
      padding:0;
  }
 .songuify {
     cursor:pointer;
+    
 }
+ul {
+    list-style-type: none;
+  }
 
 .songuify:hover {
     background-color: rgba($color: #000000e1, $alpha: 0.1);
@@ -28,6 +58,7 @@ body {
     background: rgb(238,174,202);
 background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 color:white;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 h1 {
@@ -38,7 +69,7 @@ ul {
     margin-top: 2rem;
 }
 li {
-    border-bottom: white solid 1px;
+    border-bottom: rgb(80, 78, 78) solid 1px;
 }
 ol {
     padding-left: 20px;
